Django REST framework框架学习--前后端分离/不分离示例

--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -5,7 +5,11 @@
     <title>study</title>
 </head>
 <body>
+{{ id }}
 {{ btitle }}
 {{ bpub_date }}
+{{ bread }}
+{{ bcomment }}
+{{ image }}
 </body>
 </html>
